--- a/.github/workflows/myfirstaction.yml
+++ b/.github/workflows/myfirstaction.yml
@@ -1,9 +1,9 @@
 name: my first workflow
-on: workflow_dispatch
+on: workflow_Dispatch
 jobs:
   first-job:
     runs-on:ubuntu-latest
-    steps:
+    steps 
       -name: print greeting
       run: echo "Hello World!"
       -name: print goodbye
