--- a/.github/workflows/myfirstaction.yml
+++ b/.github/workflows/myfirstaction.yml
@@ -1,11 +1,11 @@
 name: my first workflow
-on: workflow_Dispatch
+on: workflow_dispatch
 jobs:
   first-job:
-    runs-on:ubuntu-latest
-    steps 
+    runs-on: ubuntu-latest
+    steps:
       -name: print greeting
       run: echo "Hello World!"
       -name: print goodbye
-      run: echo "Good bye world"
+      run: echo "Goodbye world"
       
