--- a/.github/workflows/myfirstaction.yml
+++ b/.github/workflows/myfirstaction.yml
@@ -1,11 +1,10 @@
-name: first workflow
+name: First Workflow
 on: workflow_dispatch
 jobs:
   first-job:
     runs-on: ubuntu-latest
     steps:
-      -name: print greeting
-      run: echo "Hello World!"
-      -name: print goodbye
-      run: echo "Goodbye world"
-      
+      - name: Print greeting
+        run: echo "Hello World!"
+      - name: Print goodbye
+        run: echo "Done - bye!"
