--- a/.github/workflow/create-directory.yml
+++ b/.github/workflow/create-directory.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "arms.sha786@gmail.com"
+          git config --local user.name "armaan230589"
           git add "NAR ID"
           git commit -m "Create NAR ID directory"
           git push
