--- a/.github/workflows/create-directory.yml
+++ b/.github/workflows/create-directory.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
-          git config --local user.email "shariffarmaan65@gmail.com"
-          git config --local user.name "armaan230589"
+          git config --local user.email $"{{github.actor}}"
+          git config --local user.name "${{github.actor}}@user.noreply.github.com"
           git add "NAR ID"
           git commit -m "Create NAR ID directory"
           git push
